--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,113 +1,130 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
-$primary: #8739F9;
+$primary: #8739f9;
 $secondary: #37b9f1;
-$light: #F2F5F5;
+$light: #f2f5f5;
 
-::-webkit-scrollbar{
-    width: 12px;
+::-webkit-scrollbar {
+  width: 12px;
 }
-::-webkit-scrollbar-track{
-    background-color: $light;
+::-webkit-scrollbar-track {
+  background-color: $light;
 }
-::-webkit-scrollbar-thumb{
-    background-color: $primary;
-    border-radius: 3px;
+::-webkit-scrollbar-thumb {
+  background-color: $primary;
+  border-radius: 3px;
 }
 
 * {
-    font-family: Poppins , sans-serif;
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  font-family: Poppins, sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-    background: $light;
-    background-size: cover;
-    background-repeat: no-repeat;
+  background: $light;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.glass{
-    background: rgba( 255, 255, 255, 0.2 );
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-    backdrop-filter: blur( 11px );  
-    -webkit-backdrop-filter: blur( 11px );
-    border-radius: 50px;
-    border: 1px solid #8739F9;
-    min-height: 20rem;
-    min-width: 40rem;
-    z-index: -1;
-    position: absolute;
-    top: 19%;
+.gradient {
+  height: 88vh;
+  max-height: 88vh;
+  z-index: -1;
+  width: 100%;
+  max-width: 640px;
+  background-image: radial-gradient(
+      at 27% 37%,
+      hsla(215, 98%, 61%, 1) 0px,
+      transparent 0%
+    ),
+    radial-gradient(at 97% 21%, hsla(125, 98%, 72%, 1) 0px, transparent 50%),
+    radial-gradient(at 52% 99%, hsla(354, 98%, 61%, 1) 0px, transparent 50%),
+    radial-gradient(at 10% 29%, hsla(256, 96%, 67%, 1) 0px, transparent 50%),
+    radial-gradient(at 97% 96%, hsla(38, 60%, 74%, 1) 0px, transparent 50%),
+    radial-gradient(at 33% 50%, hsla(222, 67%, 73%, 1) 0px, transparent 50%),
+    radial-gradient(at 79% 53%, hsla(343, 68%, 79%, 1) 0px, transparent 50%);
+  position: absolute;
+  content: "";
+  width: 100%;
+  filter: blur(100px) saturate(150%);
+  top: 80px;
+  opacity: 0.15;
 }
-#search{
-    width: 100%;
-    height: 2.3rem;
-    border-radius: 20px;
-    margin: 0.2rem 1rem 0rem 0.5rem;
-    outline: none;
-    border: none;
-    background: none;
+#search {
+  width: 100%;
+  height: 2.3rem;
+  border-radius: 20px;
+  margin: 0.2rem 1rem 0rem 0.5rem;
+  outline: none;
+  border: none;
+  background: none;
 }
 
 .landing-page {
-    padding: 50px;
+  padding: 50px;
+  display: flex;
+  min-height: 90vh;
+  justify-content: space-around;
+  align-items: center;
+
+  .left {
     display: flex;
-    min-height: 90vh;
-    justify-content: space-around;
+    flex: 1;
+    flex-flow: column nowrap;
+    align-items: start;
+    width: auto;
+
+    h1{
+        font-size:4rem;
+    }
+
+    p{
+        font-size: xx-large;
+    }
+
+    h3{
+        font-weight: 100;
+        width: 30rem;
+        margin-bottom:4rem;
+    }
+  }
+}
+
+.form-container {
+  display: flex;
+  gap: 20px;
+}
+nav {
+  z-index: 2;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+  background-color: $light;
+  box-shadow: 10px 10px 10px #aaaaaaae;
+
+  .rnav {
+    display: flex;
+    flex-flow: row nowrap;
     align-items: center;
-
-    .left{
-        display: flex;
-        flex: 1;
-        flex-flow: column nowrap;
-        align-items: center;
-        gap: 2rem;
-        width: auto;
-
-        p{
-            width: 90%;
-            font-size: xx-large;
-            font-weight: 900;
-        }
-
-    }
-}
-
-.form-container{
+    gap: 1.5rem;
+  }
+  .r_nav {
     display: flex;
-    gap: 20px;
-}
-nav{
-    z-index: 2;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 1rem;
-    background-color: $light;
-    box-shadow: 10px 10px 10px #aaaaaaae;
-
-    .rnav{
-        display:flex;
-        flex-flow: row nowrap;
-        align-items: center;
-        gap: 1.5rem;
-    }
-    .r_nav{
-        display: flex;
-        align-items: center;
-        gap: 0rem;
-    }
+    gap: 0rem;
+  }
 }
-.main{
-    margin-top: 5rem;
+.main {
+  margin-top: 5rem;
 }
-.files{
-    margin-top: 8rem;
-    padding: 1rem;
+.files {
+  margin-top: 8rem;
+  padding: 1rem;
 }
