--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -128,3 +128,11 @@ nav {
   margin-top: 8rem;
   padding: 1rem;
 }
+.file-button{
+  height: 3rem;
+  flex-grow: 1;
+  background: none;
+  border: none;
+  text-align: left;
+  cursor: pointer;
+}
