--- a/src/scss/App.css
+++ b/src/scss/App.css
@@ -61,8 +61,9 @@ body {
   display: flex;
   flex: 1;
   flex-flow: column nowrap;
-  align-items: start;
+  align-items: center;
   width: auto;
+  gap: 1rem;
 }
 .landing-page .left h1 {
   font-size: 4rem;
@@ -72,8 +73,8 @@ body {
 }
 .landing-page .left h3 {
   font-weight: 100;
-  width: 30rem;
-  margin-bottom: 4rem;
+  width: 35rem;
+  margin-bottom: 2rem;
 }
 
 .form-container {
@@ -113,6 +114,31 @@ nav .r_nav {
 .files {
   margin-top: 8rem;
   padding: 1rem;
+}
+.files .arrow {
+  width: 2rem;
+  position: fixed;
+  bottom: 4.7rem;
+  right: 8.2rem;
+  transform: rotate(90deg);
+}
+.files .nodata {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  gap: 1.5rem;
+}
+.files .nodata img {
+  width: 30%;
+  display: block;
+}
+.files .nodata p {
+  font-size: 130%;
+  opacity: 0.7;
 }
 
 .file-button {
