--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -73,8 +73,9 @@ body {
     display: flex;
     flex: 1;
     flex-flow: column nowrap;
-    align-items: start;
+    align-items: center;
     width: auto;
+    gap: 1rem;
 
     h1{
         font-size:4rem;
@@ -86,8 +87,8 @@ body {
 
     h3{
         font-weight: 100;
-        width: 30rem;
-        margin-bottom:4rem;
+        width: 35rem;
+        margin-bottom:2rem;
     }
   }
 }
@@ -127,6 +128,34 @@ nav {
 .files {
   margin-top: 8rem;
   padding: 1rem;
+
+
+  .arrow{
+    width: 2rem;
+    position: fixed;
+    bottom: 4.7rem;
+    right: 8.2rem;
+    transform: rotate(90deg);
+  }
+
+  .nodata{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    gap: 1.5rem;
+    img{
+      width: 30%;
+      display: block;
+    }
+    p{
+      font-size: 130%;
+      opacity: 0.7;
+    }
+  }
 }
 .file-button{
   height: 3rem;
