--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -53,7 +53,7 @@ body {
   opacity: 0.15;
 }
 #search {
-    width: 100%;
+  width: 100%;
   height: 2.3rem;
   margin: 0.2rem 1rem 0rem 0.5rem;
   outline: none;
@@ -76,18 +76,24 @@ body {
     width: auto;
     gap: 1rem;
 
-    h1{
-        font-size:4rem;
+    h1 {
+      display: inline-block;
+      text-align: center;
+      font-size: 3rem;
+      width: 100%;
     }
 
-    p{
-        font-size: xx-large;
+    p {
+      font-size: xx-large;
+      width: 100%;
     }
 
-    h3{
-        font-weight: 100;
-        width: 35rem;
-        margin-bottom:2rem;
+    h3 {
+      text-align: center;
+      font-weight: 100;
+      width: 35rem;
+      margin-bottom: 2rem;
+      width: 100%;
     }
   }
 }
@@ -128,8 +134,7 @@ nav {
   margin-top: 8rem;
   padding: 1rem;
 
-
-  .arrow{
+  .arrow {
     width: 2rem;
     position: fixed;
     bottom: 4.7rem;
@@ -137,30 +142,36 @@ nav {
     transform: rotate(90deg);
   }
 
-  .nodata{
+  .nodata {
     display: flex;
     flex-direction: column;
     align-items: center;
     position: absolute;
     top: 60%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
     gap: 1.5rem;
-    img{
+    img {
       width: 30%;
       display: block;
     }
-    p{
+    p {
       font-size: 130%;
       opacity: 0.7;
     }
   }
 }
-.file-button{
+.file-button {
   height: 3rem;
   flex-grow: 1;
   background: none;
   border: none;
   text-align: left;
   cursor: pointer;
+}
+
+.orange_gradient {
+  background-image: linear-gradient(to right, #FFC107, #FB8C00, #FFEB3B);
+  background-clip: text;
+  color: transparent;
 }
